<resources>
    <string name="app_name">PartyBoss</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Party Boss</string>
    <string name="nav_header_subtitle">Programação para Dispositivos Móveis</string>
    <string name="nav_header_desc">Party Boss</string>
    <string name="action_settings">Settings</string>
    <string name="pesquisa_textview">Pesquisa:</string>
    <string name="pesquisa_hint">Digite sua pesquisa</string>
    <string name="login_hint">Login</string>
    <string name="senha_hint">Senha</string>
    <string name="datanasc_hint">DD/MM/AAAA</string>
    <string name="telefone_hint">Nº telefone</string>
    <string name="novousuario_link">Novo usuário?</string>
    <string name="criarusuario_button_text">Criar usuário</string>
    <string name="entrar_login_button_text">Entrar</string>
    <string name="manter_usuario_login_textview">Permanecer conectado</string>
    <string name="evento_cadastro_tipo">Tipo do evento</string>
    <string name="evento_cadastro_contratante">Nome do contratante</string>
    <string name="evento_cadastro_data_inicial">Data inicial</string>
    <string name="evento_cadastro_data_final">Data final</string>
    <string name="evento_cadastro_valor_entrada">Valor de entrada</string>
    <string name="evento_cadastro_local">Local</string>
    <string name="evento_cadastro_musica">Responsável música</string>
    <string name="evento_cadastro_decoracao">Responsável decoração</string>
    <string name="evento_cadastro_buffet">Responsável buffet</string>
    <string name="evento_cadastro_bebida">Responsável bebidas</string>
    <string name="cadastrar_button">CADASTRAR</string>
    <string name="finalizar_button">FINALIZAR</string>
    <string name="convidado_cadastro_nome">Nome do convidado</string>
    <string name="convidado_cadastro_adulto_quantidade">Quantidade de adultos</string>
    <string name="convidado_cadastro_crianca_quantidade">Quantidade de crianças</string>
    <string name="convidado_cadastro_whatsapp">Whatsapp para contato</string>
</resources>
